# distributed-sql-based-database-in-rust

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.direnv/: flake-profile-1-link
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/query/src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/: main.rs  result.rs  server.rs
src/kv/: mod.rs
src/kv/encodings/: key.rs  mod.rs
src/raft/: log.rs  message.rs  mod.rs  state_machine_driver.rs  types.rs
src/raft/node/: candidate.rs  follower.rs  leader.rs  mod.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs  operators.rs  token.rs
src/storage/engine/: mod.rs
