[package]
name = "distributed-sql-based-database-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
